--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
     </script>
     <script>
         // Khi truy cập meo.html, giả lập URL là /meo
-        if (window.location.pathname.endsWith("Meo.html")) {
+        if (window.location.pathname.endsWith("../600cauhoisathach.2025/Meo.html")) {
             history.replaceState({}, "", "/meo");
         }
     </script>
