--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="thi bằng lái xe, 600 câu hỏi sát hạch, luyện thi lái xe, mẹo thi lý thuyết">
     <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script> -->
@@ -335,13 +336,13 @@
             });
         });
     </script>
-    <script>
+    <!-- <script>
         // Hiển thị thông báo khi người dùng rời khỏi trang
         window.addEventListener('beforeunload', function(event) {
             event.preventDefault();
             event.returnValue = '';
         });
-    </script>
+    </script> -->
     <script>
         // Hiển thị thông báo khi người dùng tải lại trang
         window.addEventListener('load', function() {
