--- a/Galery.html
+++ b/Galery.html
@@ -211,7 +211,7 @@
 
     <footer>
         <div class="footer-content">
-            <p><strong>www.Taylaimoi.com - Trực thuộc <a href="https://www.csgt.vn/" style="color: white;">CSGT Việt Nam</a></strong></p>
+            <p><strong>www.Taylaimoi.com</strong></p>
             <p>Địa chỉ: 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</p>
             <a href="https://www.facebook.com/taylaimoi2266" class="fb-button" target="_blank" title="Chat Facebook" style="color:white; padding: 10px; font-size: 14px;">
                 <img src="image/icons8_facebook.svg" style="width: 24px; height: 24px" alt="Chat Facebook"> Facebook Taylaimoi
