--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     <script>
         // Hiển thị thông báo khi người dùng tải lại trang
         window.addEventListener('load', function() {
-            alert('Chào mừng bạn đến với 600 Câu Hỏi Sát Hạch Lái Xe 2025!');
+            alert('Chào mừng bạn đến với 600 Câu Hỏi Sát Hạch Lái Xe 2025 - Taylaimoi.com!');
         });
     </script>
     <script>
