Update file in Meo

--- a/Meo.html
+++ b/Meo.html
@@ -335,100 +335,100 @@
     <script>
         const galleries = {
             'meo': [
-                "image/Doc-hieu/1.jpg",
-                "image/Doc-hieu/3.jpg",
-                "image/Doc-hieu/4.jpg",
-                "image/Doc-hieu/2.jpg",
-                "image/Doc-hieu/5.jpg",
-                "image/Doc-hieu/6.jpg",
-                "image/Doc-hieu/7.jpg",
-                "image/Doc-hieu/8.jpg",
-                "image/Doc-hieu/9.jpg",
-                "image/Doc-hieu/10.jpg",
-                "image/Doc-hieu/11.jpg",
-                "image/Doc-hieu/12.jpg",
-                "image/Doc-hieu/13.jpg",
-                "image/Doc-hieu/14.jpg",
-                "image/Doc-hieu/15.jpg",
-                "image/Doc-hieu/16.jpg",
-                "image/Doc-hieu/17.jpg",
-                "image/Doc-hieu/18.jpg",
-                "image/Doc-hieu/19.jpg",
-                "image/Doc-hieu/20.jpg",
-                "image/Doc-hieu/21.jpg",
-                "image/Doc-hieu/22.jpg",
-                "image/Doc-hieu/23.jpg",
-                "image/Doc-hieu/24.jpg",
-                "image/Doc-hieu/25.jpg",
-                "image/Doc-hieu/26.jpg",
-                "image/Doc-hieu/27.jpg",
-                "image/Doc-hieu/28.jpg",
-                "image/Doc-hieu/29.jpg",
-                "image/Doc-hieu/30.jpg",
-                "image/Doc-hieu/31.jpg",
-                "image/Doc-hieu/32.jpg",
+                "image/Doc-hieu/1.webp",
+                "image/Doc-hieu/3.webp",
+                "image/Doc-hieu/4.webp",
+                "image/Doc-hieu/2.webp",
+                "image/Doc-hieu/5.webp",
+                "image/Doc-hieu/6.webp",
+                "image/Doc-hieu/7.webp",
+                "image/Doc-hieu/8.webp",
+                "image/Doc-hieu/9.webp",
+                "image/Doc-hieu/10.webp",
+                "image/Doc-hieu/11.webp",
+                "image/Doc-hieu/12.webp",
+                "image/Doc-hieu/13.webp",
+                "image/Doc-hieu/14.webp",
+                "image/Doc-hieu/15.webp",
+                "image/Doc-hieu/16.webp",
+                "image/Doc-hieu/17.webp",
+                "image/Doc-hieu/18.webp",
+                "image/Doc-hieu/19.webp",
+                "image/Doc-hieu/20.webp",
+                "image/Doc-hieu/21.webp",
+                "image/Doc-hieu/22.webp",
+                "image/Doc-hieu/23.webp",
+                "image/Doc-hieu/24.webp",
+                "image/Doc-hieu/25.webp",
+                "image/Doc-hieu/26.webp",
+                "image/Doc-hieu/27.webp",
+                "image/Doc-hieu/28.webp",
+                "image/Doc-hieu/29.webp",
+                "image/Doc-hieu/30.webp",
+                "image/Doc-hieu/31.webp",
+                "image/Doc-hieu/32.webp",
 
             ],
             'bienbao': [
-                "image/ly-thuyet/1.jpg",
-                "image/ly-thuyet/2.jpg",
-                "image/ly-thuyet/3.jpg",
-                "image/ly-thuyet/4.jpg",
-                "image/ly-thuyet/5.jpg",
-                "image/ly-thuyet/6.jpg",
-                "image/ly-thuyet/7.jpg",
-                "image/ly-thuyet/8.jpg",
-                "image/ly-thuyet/9.jpg",
-                "image/ly-thuyet/10.jpg",
-                "image/ly-thuyet/11.jpg",
-                "image/ly-thuyet/12.jpg",
-                "image/ly-thuyet/13.jpg",
-                "image/ly-thuyet/14.jpg",
-                "image/ly-thuyet/15.jpg",
-                "image/ly-thuyet/16.jpg",
-                "image/ly-thuyet/17.jpg",
-                "image/ly-thuyet/18.jpg",
-                "image/ly-thuyet/19.jpg",
-                "image/ly-thuyet/20.jpg",
-                "image/ly-thuyet/21.jpg",
-                "image/ly-thuyet/22.jpg",
-                "image/ly-thuyet/23.jpg",
-                "image/ly-thuyet/24.jpg",
+                "image/ly-thuyet/1.webp",
+                "image/ly-thuyet/2.webp",
+                "image/ly-thuyet/3.webp",
+                "image/ly-thuyet/4.webp",
+                "image/ly-thuyet/5.webp",
+                "image/ly-thuyet/6.webp",
+                "image/ly-thuyet/7.webp",
+                "image/ly-thuyet/8.webp",
+                "image/ly-thuyet/9.webp",
+                "image/ly-thuyet/10.webp",
+                "image/ly-thuyet/11.webp",
+                "image/ly-thuyet/12.webp",
+                "image/ly-thuyet/13.webp",
+                "image/ly-thuyet/14.webp",
+                "image/ly-thuyet/15.webp",
+                "image/ly-thuyet/16.webp",
+                "image/ly-thuyet/17.webp",
+                "image/ly-thuyet/18.webp",
+                "image/ly-thuyet/19.webp",
+                "image/ly-thuyet/20.webp",
+                "image/ly-thuyet/21.webp",
+                "image/ly-thuyet/22.webp",
+                "image/ly-thuyet/23.webp",
+                "image/ly-thuyet/24.webp",
                 "image/ly-thuyet/25.jpg",
                 // "image/ly-thuyet/26.jpg",
-                "image/ly-thuyet/27.jpg",
-                "image/ly-thuyet/28.jpg",
-                "image/ly-thuyet/29.jpg",
-                "image/ly-thuyet/30.jpg",
-                "image/ly-thuyet/31.jpg",
-                "image/ly-thuyet/32.jpg",
-                "image/ly-thuyet/33.jpg",
-                "image/ly-thuyet/34.jpg",
-                "image/ly-thuyet/35.jpg",
-                "image/ly-thuyet/36.jpg",
-                "image/ly-thuyet/37.jpg",
+                "image/ly-thuyet/27.webp",
+                "image/ly-thuyet/28.webp",
+                "image/ly-thuyet/29.webp",
+                "image/ly-thuyet/30.webp",
+                "image/ly-thuyet/31.webp",
+                "image/ly-thuyet/32.webp",
+                "image/ly-thuyet/33.webp",
+                "image/ly-thuyet/34.webp",
+                "image/ly-thuyet/35.webp",
+                "image/ly-thuyet/36.webp",
+                "image/ly-thuyet/37.webp",
             ],
             'sahinh': [
-                "image/Sa-hinh/1.jpg",
-                "image/Sa-hinh/2.jpg",
-                "image/Sa-hinh/3.jpg",
-                "image/Sa-hinh/4.jpg",
-                "image/Sa-hinh/5.jpg",
-                "image/Sa-hinh/6.jpg",
-                "image/Sa-hinh/7.jpg",
-                "image/Sa-hinh/8.jpg",
-                "image/Sa-hinh/9.jpg",
-                "image/Sa-hinh/10.jpg",
-                "image/Sa-hinh/11.jpg",
-                "image/Sa-hinh/12.jpg",
-                "image/Sa-hinh/13.jpg",
-                "image/Sa-hinh/14.jpg",
-                "image/Sa-hinh/15.jpg",
-                "image/Sa-hinh/16.jpg",
-                "image/Sa-hinh/17.jpg",
-                "image/Sa-hinh/18.jpg",
-                "image/Sa-hinh/19.jpg",
-                "image/Sa-hinh/20.jpg",
+                "image/Sa-hinh/1.webp",
+                "image/Sa-hinh/2.webp",
+                "image/Sa-hinh/3.webp",
+                "image/Sa-hinh/4.webp",
+                "image/Sa-hinh/5.webp",
+                "image/Sa-hinh/6.webp",
+                "image/Sa-hinh/7.webp",
+                "image/Sa-hinh/8.webp",
+                "image/Sa-hinh/9.webp",
+                "image/Sa-hinh/10.webp",
+                "image/Sa-hinh/11.webp",
+                "image/Sa-hinh/12.webp",
+                "image/Sa-hinh/13.webp",
+                "image/Sa-hinh/14.webp",
+                "image/Sa-hinh/15.webp",
+                "image/Sa-hinh/16.webp",
+                "image/Sa-hinh/17.webp",
+                "image/Sa-hinh/18.webp",
+                "image/Sa-hinh/19.webp",
+                "image/Sa-hinh/20.webp",
             ]
         };
 
