Update file jpg to webp

--- a/Galery.html
+++ b/Galery.html
@@ -260,184 +260,184 @@
 
     <script>
         const images = [{
-            src: "image/Gallery/img (1).jpg",
+            src: "image/Gallery/img (1).webp",
             alt: "Ảnh 1"
         }, {
-            src: "image/Gallery/img (2).jpg",
+            src: "image/Gallery/img (2).webp",
             alt: "Ảnh 2"
         }, {
-            src: "image/Gallery/img (3).jpg",
+            src: "image/Gallery/img (3).webp",
             alt: "Ảnh 3"
         }, {
-            src: "image/Gallery/img (4).jpg",
+            src: "image/Gallery/img (4).webp",
             alt: "Ảnh 4"
         }, {
-            src: "image/Gallery/img (5).jpg",
+            src: "image/Gallery/img (5).webp",
             alt: "Ảnh 5"
         }, {
-            src: "image/Gallery/img (6).jpg",
+            src: "image/Gallery/img (6).webp",
             alt: "Ảnh 6"
         }, {
-            src: "image/Gallery/img (7).jpg",
+            src: "image/Gallery/img (7).webp",
             alt: "Ảnh 7"
         }, {
-            src: "image/Gallery/img (8).jpg",
+            src: "image/Gallery/img (8).webp",
             alt: "Ảnh 8"
         }, {
-            src: "image/Gallery/img (9).jpg",
+            src: "image/Gallery/img (9).webp",
             alt: "Ảnh 9"
         }, {
-            src: "image/Gallery/img (10).jpg",
+            src: "image/Gallery/img (10).webp",
             alt: "Ảnh 10"
         }, {
-            src: "image/Gallery/img (11).jpg",
+            src: "image/Gallery/img (11).webp",
             alt: "Ảnh 11"
         }, {
-            src: "image/Gallery/img (12).jpg",
+            src: "image/Gallery/img (12).webp",
             alt: "Ảnh 12"
         }, {
-            src: "image/Gallery/img (13).jpg",
+            src: "image/Gallery/img (13).webp",
             alt: "Ảnh 13"
         }, {
-            src: "image/Gallery/img (14).jpg",
+            src: "image/Gallery/img (14).webp",
             alt: "Ảnh 14"
         }, {
-            src: "image/Gallery/img (15).jpg",
+            src: "image/Gallery/img (15).webp",
             alt: "Ảnh 15"
         }, {
-            src: "image/Gallery/img (16).jpg",
+            src: "image/Gallery/img (16).webp",
             alt: "Ảnh 16"
         }, {
-            src: "image/Gallery/img (17).jpg",
+            src: "image/Gallery/img (17).webp",
             alt: "Ảnh 17"
         }, {
-            src: "image/Gallery/img (18).jpg",
+            src: "image/Gallery/img (18).webp",
             alt: "Ảnh 18"
         }, {
-            src: "image/Gallery/img (19).jpg",
+            src: "image/Gallery/img (19).webp",
             alt: "Ảnh 19"
         }, {
-            src: "image/Gallery/img (20).jpg",
+            src: "image/Gallery/img (20).webp",
             alt: "Ảnh 20"
         }, {
-            src: "image/Gallery/img (21).jpg",
+            src: "image/Gallery/img (21).webp",
             alt: "Ảnh 21"
         }, {
-            src: "image/Gallery/img (22).jpg",
+            src: "image/Gallery/img (22).webp",
             alt: "Ảnh 22"
         }, {
-            src: "image/Gallery/img (23).jpg",
+            src: "image/Gallery/img (23).webp",
             alt: "Ảnh 23"
         }, {
-            src: "image/Gallery/img (24).jpg",
+            src: "image/Gallery/img (24).webp",
             alt: "Ảnh 24"
         }, {
-            src: "image/Gallery/img (25).jpg",
+            src: "image/Gallery/img (25).webp",
             alt: "Ảnh 25"
         }, {
-            src: "image/Gallery/img (26).jpg",
+            src: "image/Gallery/img (26).webp",
             alt: "Ảnh 26"
         }, {
-            src: "image/Gallery/img (27).jpg",
+            src: "image/Gallery/img (27).webp",
             alt: "Ảnh 27"
         }, {
-            src: "image/Gallery/img (28).jpg",
+            src: "image/Gallery/img (28).webp",
             alt: "Ảnh 28"
         }, {
-            src: "image/Gallery/img (29).jpg",
+            src: "image/Gallery/img (29).webp",
             alt: "Ảnh 29"
         }, {
-            src: "image/Gallery/img (30).jpg",
+            src: "image/Gallery/img (30).webp",
             alt: "Ảnh 30"
         }, {
-            src: "image/Gallery/img (31).jpg",
+            src: "image/Gallery/img (31).webp",
             alt: "Ảnh 31"
         }, {
-            src: "image/Gallery/img (32).jpg",
+            src: "image/Gallery/img (32).webp",
             alt: "Ảnh 32"
         }, {
-            src: "image/Gallery/img (33).jpg",
+            src: "image/Gallery/img (33).webp",
             alt: "Ảnh 33"
         }, {
-            src: "image/Gallery/img (34).jpg",
+            src: "image/Gallery/img (34).webp",
             alt: "Ảnh 34"
         }, {
-            src: "image/Gallery/img (35).jpg",
+            src: "image/Gallery/img (35).webp",
             alt: "Ảnh 35"
         }, {
-            src: "image/Gallery/img (36).jpg",
+            src: "image/Gallery/img (36).webp",
             alt: "Ảnh 36"
         }, {
-            src: "image/Gallery/img (37).jpg",
+            src: "image/Gallery/img (37).webp",
             alt: "Ảnh 37"
         }, {
-            src: "image/Gallery/img (38).jpg",
+            src: "image/Gallery/img (38).webp",
             alt: "Ảnh 38"
         }, {
-            src: "image/Gallery/img (39).jpg",
+            src: "image/Gallery/img (39).webp",
             alt: "Ảnh 39"
         }, {
-            src: "image/Gallery/img (40).jpg",
+            src: "image/Gallery/img (40).webp",
             alt: "Ảnh 40"
         }, {
-            src: "image/Gallery/img (41).jpg",
+            src: "image/Gallery/img (41).webp",
             alt: "Ảnh 41"
         }, {
-            src: "image/Gallery/img (42).jpg",
+            src: "image/Gallery/img (42).webp",
             alt: "Ảnh 42"
         }, {
-            src: "image/Gallery/img (43).jpg",
+            src: "image/Gallery/img (43).webp",
             alt: "Ảnh 43"
         }, {
-            src: "image/Gallery/img (44).jpg",
+            src: "image/Gallery/img (44).webp",
             alt: "Ảnh 44"
         }, {
-            src: "image/Gallery/img (45).jpg",
+            src: "image/Gallery/img (45).webp",
             alt: "Ảnh 45"
         }, {
-            src: "image/Gallery/img (46).jpg",
+            src: "image/Gallery/img (46).webp",
             alt: "Ảnh 46"
         }, {
-            src: "image/Gallery/img (47).jpg",
+            src: "image/Gallery/img (47).webp",
             alt: "Ảnh 47"
         }, {
-            src: "image/Gallery/img (48).jpg",
+            src: "image/Gallery/img (48).webp",
             alt: "Ảnh 48"
         }, {
-            src: "image/Gallery/img (49).jpg",
+            src: "image/Gallery/img (49).webp",
             alt: "Ảnh 49"
         }, {
-            src: "image/Gallery/img (50).jpg",
+            src: "image/Gallery/img (50).webp",
             alt: "Ảnh 50"
         }, {
-            src: "image/Gallery/img (51).jpg",
+            src: "image/Gallery/img (51).webp",
             alt: "Ảnh 51"
         }, {
-            src: "image/Gallery/img (52).jpg",
+            src: "image/Gallery/img (52).webp",
             alt: "Ảnh 52"
         }, {
-            src: "image/Gallery/img (53).jpg",
+            src: "image/Gallery/img (53).webp",
             alt: "Ảnh 53"
         }, {
-            src: "image/Gallery/img (54).jpg",
+            src: "image/Gallery/img (54).webp",
             alt: "Ảnh 54"
         }, {
-            src: "image/Gallery/img (55).jpg",
+            src: "image/Gallery/img (55).webp",
             alt: "Ảnh 55"
         }, {
-            src: "image/Gallery/img (56).jpg",
+            src: "image/Gallery/img (56).webp",
             alt: "Ảnh 56"
         }, {
-            src: "image/Gallery/img (57).jpg",
+            src: "image/Gallery/img (57).webp",
             alt: "Ảnh 57"
         }, {
-            src: "image/Gallery/img (58).jpg",
+            src: "image/Gallery/img (58).webp",
             alt: "Ảnh 58"
         }, {
-            src: "image/Gallery/img (59).jpg",
+            src: "image/Gallery/img (59).webp",
             alt: "Ảnh 59"
         }, {
-            src: "image/Gallery/img (60).jpg",
+            src: "image/Gallery/img (60).webp",
             alt: "Ảnh 60"
         }];
 
