--- a/Meo.html
+++ b/Meo.html
@@ -394,7 +394,7 @@
                 "image/ly-thuyet/22.webp",
                 "image/ly-thuyet/23.webp",
                 "image/ly-thuyet/24.webp",
-                "image/ly-thuyet/25.jpg",
+                "image/ly-thuyet/25.webp",
                 // "image/ly-thuyet/26.jpg",
                 "image/ly-thuyet/27.webp",
                 "image/ly-thuyet/28.webp",
