Update button Home & Update Exam

--- a/examb.html
+++ b/examb.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Đề thi hạng B - Thời gian làm bài 20 phút. Vui lòng không làm mới trang trong quá trình làm bài.">
     <title>Đề hạng B</title>
     <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: "Segoe UI", sans-serif;
@@ -109,6 +110,7 @@
 
 <body>
     <section class="time-section">
+        <button class="button-home"><a href="index.html">Trang chủ</a></button>
         <h2>Thời gian làm bài:</h2>
         <div id="timer">20:00</div>
     </section>
