--- a/examc1.html
+++ b/examc1.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Đề thi hạng C1 - Thời gian làm bài 22 phút. Vui lòng không làm mới trang trong quá trình làm bài.">
     <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: "Segoe UI", sans-serif;
@@ -108,6 +109,7 @@
 
 <body>
     <section class="time-section">
+        <button class="button-home"><a href="index.html">Trang chủ</a></button>
         <h2>Thời gian làm bài:</h2>
         <div id="timer">22:00</div>
     </section>
