--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="tab-list" role="tablist">
                     <button role="tab" class="tab active" data-tab="tab-b">Hạng Bằng B</button>
                     <button role="tab" class="tab" data-tab="tab-c1">Hạng Bằng C1</button>
-                    <button role="tab" class="tab" data-tab="tab-c">Hạng Bằng C</button>
+                    <button role="tab" class="tab" data-tab="tab-c">Hạng Bằng C </button>
                     <button role="tab" class="tab" data-tab="tab-d">Hạng Bằng D1, D2, D</button>
                     <button role="tab" class="tab" data-tab="tab-e">60 câu liệt hay gặp</button>
                 </div>
@@ -169,12 +169,12 @@
                 </div>
                 <div class="tab-panel" id="tab-c">
                     <button class="practice-btn" data-chapter="2">
-                <a href="#" target="_blank">➜ Bắt đầu luyện tập Hạng C</a>
+                <a href="#" target="_blank">➜ Bắt đầu luyện tập Hạng C <p style="font-style: italic; padding: 4px;">(Đang cập nhật)</p></a>
             </button>
                 </div>
                 <div class="tab-panel" id="tab-d">
                     <button class="practice-btn" data-chapter="3">
-                <a href="#" target="_blank">➜ Bắt đầu luyện tập Hạng D1, D2, D</a>
+                <a href="#" target="_blank">➜ Bắt đầu luyện tập Hạng D1, D2, D <p style="font-style: italic; padding: 4px;">(Đang cập nhật)</p></a>
             </button>
                 </div>
                 <div class="tab-panel" id="tab-e">
