--- a/examb.html
+++ b/examb.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Đề thi hạng B - Thời gian làm bài 20 phút. Vui lòng không làm mới trang trong quá trình làm bài.">
+    <meta name="description" content="600 Câu Hỏi Sát Hạch Lái Xe 2025 - Ôn thi lý thuyết bằng lái xe hạng B, C1,C, D,D1,D2 với bộ đề chuẩn của Bộ Công An">
+    <meta name="keywords" content="thi bằng lái xe, 600 câu hỏi sát hạch, luyện thi lái xe, mẹo thi lý thuyết">
+    <meta name="author" content="600 Câu Hỏi Sát Hạch Lái Xe 2025, Taylaimoi.com, taylaimoi2266">
     <title>Đề hạng B</title>
     <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
