--- a/examc1.html
+++ b/examc1.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Đề thi hạng C1 - Thời gian làm bài 22 phút. Vui lòng không làm mới trang trong quá trình làm bài.">
+    <meta name="keywords" content="thi bằng lái xe, 600 câu hỏi sát hạch, luyện thi lái xe, mẹo thi lý thuyết">
+    <meta name="author" content="600 Câu Hỏi Sát Hạch Lái Xe 2025, Taylaimoi.com, taylaimoi2266">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
     <style>
