--- a/Galery.html
+++ b/Galery.html
@@ -71,7 +71,7 @@
         .navbar .container {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
         }
         
