--- a/Galery.html
+++ b/Galery.html
@@ -72,7 +72,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            align-items: center;
+            align-items: left;
         }
         
         .logo-img {
