--- a/Meo.html
+++ b/Meo.html
@@ -163,7 +163,7 @@
             .nav-tabs {
                 display: flex;
                 flex-direction: column;
-                align-items: stretch;
+                align-items: left;
                 border-bottom: none;
             }
             .nav-tabs .nav-item {
@@ -182,6 +182,29 @@
                 color: #fff;
                 border-left-color: #b71c1c;
                 /* Viền trái nổi bật */
+            }
+        }
+        
+        @media (max-width: 768px) {
+            .navbar {
+                padding: 10px 0;
+            }
+            .navbar .container {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 10px;
+                align-items: left;
+            }
+        }
+        
+        @media (min-width: 769px) {
+            .navbar {
+                padding: 12px 0;
+            }
+            .navbar .container {
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: left;
             }
         }
     </style>
