Update css gallery

--- a/Galery.html
+++ b/Galery.html
@@ -80,6 +80,9 @@
             </div>
         </div>
     </nav>
+    <section class="contact-section">
+        <a href="tel:0989465167" class="call-button" title="Gọi ngay"><i class="fas fa-phone"></i></a>
+    </section>
     <main class="container">
         <ul class="main-menu">
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
@@ -113,8 +116,11 @@
             </div>
         </section>
         <section class="gallery-section">
-            <h2>Một số hình ảnh của Taylaimoi.com</h2>
-            <p>(Click để xem toàn màn hình)</p>
+            <div class="text-gallery">
+                <h2>Một số hình ảnh của Taylaimoi.com</h2>
+                <p>(Click để xem toàn màn hình)</p>
+            </div>
+
             <div id="lightgallery" class="gallery">
                 <!-- Ảnh tự động thêm bằng JS -->
             </div>
