--- a/Galery.html
+++ b/Galery.html
@@ -352,7 +352,15 @@
             plugins: [lgZoom, lgThumbnail, lgFullscreen],
             speed: 500,
             download: false,
+            thumbnail: true,
+            showCloseIcon: true,
             fullScreen: true,
+            mobileSettings: {
+                controls: true,
+                showCloseIcon: true,
+                download: false,
+                rotate: false
+            }
         });
     </script>
 
