--- a/examb.html
+++ b/examb.html
@@ -10,7 +10,7 @@
     <meta name="author" content="600 Câu Hỏi Sát Hạch Lái Xe 2025, Taylaimoi.com, taylaimoi2266">
     <title>Đề hạng B</title>
     <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <style>
         body {
             font-family: "Segoe UI", sans-serif;
