--- a/exam.html
+++ b/exam.html
@@ -18,6 +18,10 @@
     <!-- Form nhập thông tin cá nhân -->
     <div class="info-form-container" id="info-form-container">
         <header>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
+            </div>
             <h1>Thông tin của bạn</h1>
             <p class="description">Vui lòng cung cấp thông tin cá nhân trước khi bắt đầu bài trắc nghiệm</p>
         </header>
