--- a/exam.html
+++ b/exam.html
@@ -22,7 +22,7 @@
                 <a href="index.html">
                     <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
             </div>
-            <h1>Thông tin của bạn</h1>
+            <h2 style="color: brown;">Thông tin của bạn</h2>
             <p class="description">Vui lòng cung cấp thông tin cá nhân trước khi bắt đầu bài trắc nghiệm</p>
         </header>
 
