--- a/index.html
+++ b/index.html
@@ -160,17 +160,17 @@
 
                 <div class="tab-panel active" id="tab-b">
                     <button class="practice-btn" data-chapter="600">
-                <a href="examb.html" target="_blank">➜ Bắt đầu luyện tập Hạng B</a>
+                <a href="exam.html" target="_blank">➜ Bắt đầu luyện tập Hạng B</a>
             </button>
                 </div>
                 <div class="tab-panel" id="tab-c1">
                     <button class="practice-btn" data-chapter="1">
-                <a href="examc1.html" target="_blank">➜ Bắt đầu luyện tập Hạng C1</a>
+                <a href="exam.html" target="_blank">➜ Bắt đầu luyện tập Hạng C1</a>
             </button>
                 </div>
                 <div class="tab-panel" id="tab-c">
                     <button class="practice-btn" data-chapter="2">
-                <a href="#" target="_blank">➜ Bắt đầu luyện tập Hạng C <p style="font-style: italic; padding: 4px;">(Đang cập nhật)</p></a>
+                <a href="exam.html" target="_blank">➜ Bắt đầu luyện tập Hạng C</a>
             </button>
                 </div>
                 <div class="tab-panel" id="tab-d">
