Update btn-home  & Logo

--- a/exam.html
+++ b/exam.html
@@ -59,6 +59,11 @@
     <!-- Phần chọn loại đề thi -->
     <div class="exam-type-container hidden" id="exam-type-container">
         <header>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
+                </a>
+            </div>
             <h2 style="color: brown;">Chọn loại đề thi</h2>
             <p class="description">Vui lòng chọn một trong các loại đề thi dưới đây</p>
         </header>
@@ -138,6 +143,7 @@
             <div class="score">Điểm: <span id="score">0</span>/<span id="total-score">0</span></div>
             <p id="result-message"></p>
             <button class="restart-btn" id="restart-btn">Làm lại bài trắc nghiệm</button>
+            <a href="index.html" id="btn-home"> Về trang chủ</a>
         </div>
     </div>
 </body>
