--- a/exam.html
+++ b/exam.html
@@ -33,27 +33,28 @@
 
         <form id="info-form">
             <div class="form-group">
-                <label for="name">Họ và tên</label>
+                <label for="name">Họ và tên<span style="color: red;">*</span></label>
                 <input type="text" id="name" name="name" required placeholder="Nguyễn Văn A">
             </div>
 
             <div class="form-group">
-                <label for="phone">Số điện thoại</label>
+                <label for="phone">Số điện thoại <span style="color: red;">*</span></label>
                 <input type="tel" id="phone" name="phone" required placeholder="0987654321">
             </div>
 
             <div class="form-group">
-                <label for="address">Địa chỉ</label>
+                <label for="address">Địa chỉ <h5 style="font-style: italic;">(không bắt buộc)</h5> </label>
                 <input type="text" id="address" name="address" required placeholder="Số nhà, đường, quận/huyện, tỉnh/thành phố">
             </div>
 
             <div class="form-group">
-                <label for="email">Email</label>
+                <label for="email">Email <h5 style="font-style: italic;">(không bắt buộc)</h5> </label>
                 <input type="email" id="email" name="email" placeholder="example@email.com">
             </div>
 
             <button type="submit" class="btn-start">Bắt đầu làm bài</button>
         </form>
+        <div class="sub-text"> (©) Bản quyền từ Taylaimoi.com</div>
     </div>
 
     <!-- Phần chọn loại đề thi -->
@@ -70,18 +71,19 @@
 
         <div class="exam-types">
             <button class="exam-type-btn" data-type="B" data-time="20">
-                <span class="exam-title">Đề B</span>
+                <span class="exam-title">Hạng B</span>
                 <span class="exam-details">30 câu - 20 phút</span>
             </button>
             <button class="exam-type-btn" data-type="C" data-time="22">
-                <span class="exam-title">Đề C</span>
+                <span class="exam-title">Hạng C</span>
                 <span class="exam-details">35 câu - 22 phút</span>
             </button>
             <button class="exam-type-btn" data-type="C1" data-time="24">
-                <span class="exam-title">Đề C1</span>
+                <span class="exam-title">Hạng C1</span>
                 <span class="exam-details">40 câu - 24 phút</span>
             </button>
         </div>
+        <div class="sub-text"> (©) Bản quyền từ Taylaimoi.com</div>
     </div>
 
 
@@ -142,10 +144,14 @@
             <p>Bạn đã hoàn thành bài trắc nghiệm!</p>
             <div class="score">Điểm: <span id="score">0</span>/<span id="total-score">0</span></div>
             <p id="result-message"></p>
-            <button class="restart-btn" id="restart-btn">Làm lại bài trắc nghiệm</button>
-            <a href="index.html" id="btn-home"> Về trang chủ</a>
+            <div class="button-group">
+                <button class="btn retry" id="restart-btn">Làm lại bài trắc nghiệm</button>
+                <a class="btn home" href="index.html" id="btn-home"> Về trang chủ</a>
+            </div>
         </div>
+        <div class="sub-text"> (©) Bản quyền từ Taylaimoi.com</div>
     </div>
+
 </body>
 <script src="assets/exam.js"></script>
 
