Update css title

--- a/exam.html
+++ b/exam.html
@@ -22,7 +22,7 @@
                     <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
                 </a>
             </div>
-            <h2 style="color: brown;">Thông tin của bạn</h2>
+            <h2 class="title" style="color: brown;">Thông tin của bạn</h2>
             <p class="description">Vui lòng cung cấp đầy đủ các thông tin của bạn trước khi bắt đầu làm bài</p>
         </header>
 
@@ -65,7 +65,7 @@
                     <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img"></a>
                 </a>
             </div>
-            <h2 style="color: brown;">Chọn loại đề thi</h2>
+            <h2 class="title" style="color: brown;">Chọn loại đề thi</h2>
             <p class="description">Vui lòng chọn một trong các loại đề thi dưới đây</p>
         </header>
 
@@ -91,7 +91,7 @@
     <!-- Phần trắc nghiệm -->
     <div class="container hidden" id="quiz-container">
         <header>
-            <h1 id="exam-title">Ôn luyện đề theo chương</h1>
+            <h2 id="exam-title">Ôn luyện đề theo chương</h2>
             <p class="description">Chọn đáp án và xem kết quả ngay lập tức. Di chuyển giữa các câu hỏi bằng cách sử dụng nút điều hướng hoặc chọn câu hỏi từ danh sách.</p>
             <!-- Hiển thị thời gian -->
             <div class="timer-container hidden" id="timer-container">
