--- a/exam.html
+++ b/exam.html
@@ -44,7 +44,7 @@
 
             <div class="form-group">
                 <label for="address">Địa chỉ <h5 style="font-style: italic;">(không bắt buộc)</h5> </label>
-                <input type="text" id="address" name="address" required placeholder="Số nhà, đường, quận/huyện, tỉnh/thành phố">
+                <input type="text" id="address" name="address" required placeholder="Ha Noi">
             </div>
 
             <div class="form-group">
